--- a/Homester/en.lproj/MainStoryboard.storyboard
+++ b/Homester/en.lproj/MainStoryboard.storyboard
@@ -81,6 +81,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="check:" destination="i6y-Ld-nnw" eventType="touchUpInside" id="Nyc-Ch-wwk"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -166,6 +169,7 @@
         <class className="SoundView" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SoundView.h"/>
             <relationships>
+                <relationship kind="action" name="checktweet:"/>
                 <relationship kind="outlet" name="lastTweetTextView" candidateClass="UITextView"/>
             </relationships>
         </class>
