--- a/Homester/en.lproj/MainStoryboard.storyboard
+++ b/Homester/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Tlu-al-vvO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Tlu-al-vvO">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -51,7 +51,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="512" y="37"/>
+            <point key="canvasLocation" x="46" y="-337"/>
         </scene>
         <!--Sound View-->
         <scene sceneID="ANB-Aw-Ctf">
@@ -70,6 +70,9 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KRy-hK-z6R">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="95" id="DqP-J9-dLa"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Check">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -108,29 +111,40 @@
                                     <action selector="voice:" destination="i6y-Ld-nnw" eventType="touchUpInside" id="S1f-So-eqX"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Intruder Alert! Here's a pic!" translatesAutoresizingMaskIntoConstraints="NO" id="ZYW-Zq-ZSI">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="OeQ-0X-cRz"/>
+                                    <constraint firstAttribute="width" constant="240" id="tRi-yb-Rdf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1Cu-4d-TNU" firstAttribute="trailing" secondItem="KRy-hK-z6R" secondAttribute="trailing" type="default" id="3ae-MJ-Bxo"/>
                             <constraint firstItem="KRy-hK-z6R" firstAttribute="top" secondItem="1Db-ec-v5l" secondAttribute="top" constant="-1" id="A3P-aZ-qh0"/>
                             <constraint firstItem="gu6-km-UHL" firstAttribute="trailing" secondItem="1Db-ec-v5l" secondAttribute="trailing" type="default" id="Hkz-6c-tof"/>
+                            <constraint firstItem="ZYW-Zq-ZSI" firstAttribute="top" secondItem="gu6-km-UHL" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="JWV-2U-hYj"/>
+                            <constraint firstItem="ZYW-Zq-ZSI" firstAttribute="leading" secondItem="1Db-ec-v5l" secondAttribute="leading" constant="28" id="LPV-8c-Hyk"/>
+                            <constraint firstItem="KRy-hK-z6R" firstAttribute="centerX" secondItem="gu6-km-UHL" secondAttribute="centerX" type="default" id="MT7-2n-aDM"/>
                             <constraint firstAttribute="trailing" secondItem="xSB-vy-1hr" secondAttribute="trailing" constant="57" id="Qap-d4-vhe"/>
                             <constraint firstItem="gu6-km-UHL" firstAttribute="leading" secondItem="1Db-ec-v5l" secondAttribute="leading" type="default" id="Xb6-Qb-ZnN"/>
-                            <constraint firstItem="1Cu-4d-TNU" firstAttribute="centerX" secondItem="gu6-km-UHL" secondAttribute="centerX" type="default" id="b5z-FM-h9K"/>
-                            <constraint firstItem="xSB-vy-1hr" firstAttribute="top" secondItem="1Db-ec-v5l" secondAttribute="top" constant="184" id="kqv-Vd-OHE"/>
-                            <constraint firstItem="1Cu-4d-TNU" firstAttribute="leading" secondItem="KRy-hK-z6R" secondAttribute="leading" type="default" id="p0z-kN-5dU"/>
-                            <constraint firstAttribute="bottom" secondItem="1Cu-4d-TNU" secondAttribute="bottom" constant="158" id="rxj-cg-bGC"/>
-                            <constraint firstItem="gu6-km-UHL" firstAttribute="top" secondItem="1Db-ec-v5l" secondAttribute="top" constant="189" id="woB-k9-qZI"/>
+                            <constraint firstItem="1Cu-4d-TNU" firstAttribute="leading" secondItem="1Db-ec-v5l" secondAttribute="leading" constant="41" id="clB-9Y-7ft"/>
+                            <constraint firstItem="1Cu-4d-TNU" firstAttribute="top" secondItem="1Db-ec-v5l" secondAttribute="top" constant="138" id="gKE-0t-F8n"/>
+                            <constraint firstItem="gu6-km-UHL" firstAttribute="top" secondItem="1Db-ec-v5l" secondAttribute="top" constant="76" id="ilD-h8-npF"/>
+                            <constraint firstItem="xSB-vy-1hr" firstAttribute="top" secondItem="1Db-ec-v5l" secondAttribute="top" constant="184" id="rKf-l9-W7C"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="djS-pe-D4X"/>
                     <connections>
                         <outlet property="lastTweetTextView" destination="gu6-km-UHL" id="Rei-a6-wL7"/>
+                        <outlet property="postText" destination="ZYW-Zq-ZSI" id="UdG-kh-big"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ax3-Ia-a3e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="678" y="-9"/>
+            <point key="canvasLocation" x="166" y="-175"/>
         </scene>
         <!--Cam View-->
         <scene sceneID="BMz-ba-kgX">
@@ -160,7 +174,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YhP-yg-nof" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="939" y="-253"/>
+            <point key="canvasLocation" x="259" y="-877"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3HF-td-VzV">
@@ -200,8 +214,11 @@
                 <relationship kind="action" name="check:"/>
                 <relationship kind="action" name="checktweet:"/>
                 <relationship kind="action" name="recognizer:"/>
+                <relationship kind="action" name="sharePost:"/>
                 <relationship kind="action" name="voice:"/>
+                <relationship kind="outlet" name="charCounter" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="lastTweetTextView" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="postText" candidateClass="UITextView"/>
             </relationships>
         </class>
     </classes>
